--- a/src/App.css
+++ b/src/App.css
@@ -224,3 +224,32 @@ img {
   text-align: center;
 }
 
+@media screen and (max-width: 600px) {
+  .news-wrap {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .card-wrap {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .news-card-img {
+    display: contents;
+  }
+
+  .news-card-title {
+    display: contents;    
+  }
+  
+  .foot-bg {
+    height: 25vw;
+  }
+
+  .navbar-menu {
+    overflow: auto;
+    white-space: nowrap;
+  }
+}
