--- a/src/App.css
+++ b/src/App.css
@@ -245,11 +245,13 @@ img {
   }
   
   .foot-bg {
-    height: 25vw;
+    max-height: 30vw;
   }
 
   .navbar-menu {
     overflow: auto;
     white-space: nowrap;
   }
+
+
 }
